# upper src CMakeLists

add_subdirectory(include) 
add_subdirectory(base)
# add_subdirectory(build_tools)
# add_subdirectory(mime)
add_subdirectory(sdk)
add_subdirectory(src)
# add_subdirectory(plugins)
add_subdirectory(tools)
# add_subdirectory(templates)
# add_subdirectory(scripts)
# add_subdirectory(wxsmith)
