# wx scinta CMakeLists

add_subdirectory(src)

find_package(wxWidgets REQUIRED COMPONENTS net core base)
include(${wxWidgets_USE_FILE})

find_package(PkgConfig REQUIRED)
pkg_check_modules(GLIB REQUIRED glib-2.0)
pkg_check_modules(GTK2 REQUIRED gtk+-2.0)

# -DHAVE_CONFIG_H -DTIXML_USE_STL=YES
set(CMAKE_CXX_FLAGS "-DSCI_LEXER -DLINK_LEXERS -D__WX__ -DGTK ")

include_directories(
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/include"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/include/wx"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/include"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src"
	"${GLIB_INCLUDE_DIRS}"
	"${GTK2_INCLUDE_DIRS}"
)

add_library(wxscintilla STATIC
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/wxscintilla.cpp"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/PlatWX.cpp"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/ScintillaWX.cpp"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/PlatWX.cpp"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/ScintillaWX.cpp"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/wxscintilla.cpp"
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexA68k.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAPDL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexASY.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAU3.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAVE.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAVS.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAbaqus.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAda.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAsm.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexAsn1.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexBaan.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexBash.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexBasic.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexBatch.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexBibTeX.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexBullant.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCLW.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCOBOL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCPP.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCSS.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCaml.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCmake.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCoffeeScript.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexConf.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCrontab.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexCsound.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexD.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexDMAP.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexDMIS.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexDiff.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexECL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexEDIFACT.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexEScript.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexEiffel.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexErlang.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexErrorList.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexFlagship.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexForth.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexFortran.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexGAP.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexGui4Cli.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexHTML.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexHaskell.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexHex.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexIndent.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexInno.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexJSON.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexKix.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexKVIrc.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexLaTeX.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexLisp.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexLout.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexLua.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMMIXAL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMPT.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMSSQL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMagik.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMake.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMarkdown.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMatlab.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMetapost.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexModula.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexMySQL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexNimrod.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexNsis.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexNull.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexOScript.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexOpal.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPB.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPLM.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPO.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPOV.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPS.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPascal.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPerl.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPowerPro.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPowerShell.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexProgress.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexProps.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexPython.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexR.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexRebol.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexRegistry.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexRuby.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexRust.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSML.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSQL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexScriptol.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSmalltalk.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSorcus.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSpecman.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSpice.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexSTTXT.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTACL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTADS3.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTAL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTCL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTCMD.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTeX.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexTxt2tags.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexVB.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexVHDL.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexVerilog.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexVisualProlog.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexers/LexYAML.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/Accessor.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/CharacterCategory.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/CharacterSet.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/LexerBase.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/LexerModule.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/LexerNoExceptions.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/LexerSimple.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/PropSetSimple.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/StyleContext.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/lexlib/WordList.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/AutoComplete.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/CallTip.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/CaseConvert.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/CaseFolder.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Catalogue.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/CellBuffer.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/CharClassify.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/ContractionState.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Decoration.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Document.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/EditModel.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Editor.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/EditView.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/ExternalLexer.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Indicator.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/KeyMap.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/LineMarker.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/MarginView.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/PerLine.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/PositionCache.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/RESearch.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/RunStyles.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/ScintillaBase.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Selection.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/Style.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/UniConversion.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/ViewStyle.cxx" 
	"${PROJECT_SOURCE_DIR}/src/sdk/wxscintilla/src/scintilla/src/XPM.cxx"
)

target_link_libraries(wxscintilla
	${wxWidgets_LIBRARIES}
	${GLIB_LDFLAGS}
	${GTK2_LIBRARIES}
)
